Extra test features